添加时钟动画和翻书动画

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
         font-size:12px;
     ">
         <p>版权所有：lizhihua.com</p>
-        <a href="">我的网站</a>
+        
+        <a href="time.html">时钟动画</a>
+        <a href="flex.html">弹性布局</a>
+        <a href="book.html">翻书动画</a>
     </div>
 </body>
 </html>
